# BaleVPN

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  download.py  extract_proto.py
.github/workflows/: android.yml  bale-vpn-rust.yml  node-binaries.yml  rust.yml
bale-android/: gradle.properties  settings.gradle.kts
bale-android/androidApp/: build.gradle.kts
bale-android/androidApp/src/main/: AndroidManifest.xml
bale-android/androidApp/src/main/kotlin/ai/bale/proxy/: AdmissionStore.kt  BaleConnection.kt  ContactsActivity.kt  PhoneAuthActivity.kt
bale-android/androidApp/src/main/res/layout/: activity_contacts.xml  activity_main.xml  activity_otp.xml  activity_phone_auth.xml
bale-android/androidApp/src/main/res/menu/: menu_contacts.xml
bale-android/androidApp/src/main/res/values/: colors.xml
bale-android/shared/src/commonMain/kotlin/ai/bale/proxy/bale/: BaleAuthClient.kt
bale-android/shared/src/commonMain/kotlin/ai/bale/proxy/proto/: Proto.kt
bale-android/shared/src/commonMain/kotlin/ai/bale/proxy/tunnel/: DataTransport.kt
bale-android/shared/src/iosMain/kotlin/ai/bale/proxy/livekit/: IosLiveKitTransport.kt
bale-node/: package-lock.json  package.json
bale-node/proto/: bale_bank_v1.proto  bale_messaging_v2.proto  bale_turing_v1.proto  bale_v1.proto
bale-node/src/: ws-client.js
bale-signaling-rust/: Cargo.toml
bale-signaling-rust/bale-signaling/: Cargo.toml
bale-signaling-rust/bale-signaling/proto/: bale_premium_v1.proto  bale_presence_v1.proto  bale_wallet_v1.proto
bale-signaling-rust/bale-signaling/src/: auth.rs  contacts.rs  grpc_web.rs  lib.rs  peer.rs  proto.rs  signaling.rs  ws.rs
bale-vpn-android/: build.gradle.kts  settings.gradle.kts
bale-vpn-android/androidApp/: build.gradle.kts  proguard-rules.pro
bale-vpn-android/androidApp/src/main/: AndroidManifest.xml
bale-vpn-android/androidApp/src/main/kotlin/ai/bale/proxy/: AdmissionStore.kt  BaleApp.kt  BaleConnection.kt  BaleServerService.kt  BaleSocks5Service.kt  BaleVpnService.kt  BaseActivity.kt  BlacklistStore.kt  ClientStatsActivity.kt  ContactsActivity.kt  LkManagerNative.kt  LkNative.kt  LkTunnel.kt  MainActivity.kt  NativeContinuation.kt  NativeJni.kt  NetUtils.kt  OtpActivity.kt  PhoneAuthActivity.kt  ServerAdmissionActivity.kt  ServerClientsActivity.kt  TunnelManagers.kt  UserCache.kt
bale-vpn-android/androidApp/src/main/kotlin/ai/bale/proxy/bale/: BaleAuth.kt  BaleAuthNative.kt  BaleSignaling.kt  BaleSignalingNative.kt  SharedPrefsTokenStore.kt
bale-vpn-android/androidApp/src/main/kotlin/ai/bale/proxy/tunnel/: LiveKitStats.kt  PacketStats.kt
bale-vpn-android/androidApp/src/main/res/layout/: activity_contacts.xml  activity_main.xml  activity_otp.xml  activity_server_admission.xml  activity_server_clients.xml  item_contact.xml
bale-vpn-android/androidApp/src/main/res/values/: strings.xml
bale-vpn-android/rust/: Cargo.toml
bale-vpn-android/rust/bale-signaling-android/: Cargo.toml
bale-vpn-android/rust/bale-signaling-android/src/: libjni.rs
bale-vpn-android/rust/jni-shared/: Cargo.toml
bale-vpn-android/rust/jni-shared/src/: lib.rs
bale-vpn-android/rust/lktunnel-android/: Cargo.toml
bale-vpn-android/rust/lktunnel-android/src/: libjni.rs
bale-vpn-android/rust/lktunnel-jni/: Cargo.toml
bale-vpn-android/rust/lktunnel-jni/src/: lib.rs  manager.rs  signaling.rs  tunnel.rs
bale-vpn-android/shared/: build.gradle.kts
bale-vpn-android/shared/src/androidMain/kotlin/ai/bale/proxy/: LkTunnel.kt  NativeErrorBridge.kt  NativeJni.kt  PacketProcessor.kt  Socks5Bridge.kt
bale-vpn-android/shared/src/androidMain/kotlin/ai/bale/proxy/livekit/: AndroidLiveKitTransport.kt
bale-vpn-android/shared/src/androidMain/kotlin/ai/bale/proxy/net/: AppHttp.kt
bale-vpn-android/shared/src/commonMain/kotlin/ai/bale/proxy/bale/: BaleWsClient.kt  ContactRepository.kt  Models.kt
bale-vpn-android/shared/src/commonMain/kotlin/ai/bale/proxy/proto/: Proto.kt
bale-vpn-android/shared/src/commonMain/kotlin/ai/bale/proxy/tunnel/: BaleClientSignaling.kt  DataTransport.kt  FrameCodec.kt  TunnelManager.kt
bale-vpn-node/: binding.gyp  package-lock.json  package.json
bale-vpn-node/proto/: bale_abacus_v1.proto  bale_meet_v1.proto  bale_message_stream_v1.proto  bale_timche_v1.proto
bale-vpn-node/rust/: Cargo.toml
bale-vpn-node/rust/lktunnel-node/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
bale-vpn-node/rust/lktunnel-node/src/: lib.rs
bale-vpn-node/src/: admission.js  bale-proxy.js  bale-ws.js  blacklist.js  config-store.js  constants.js  grpc-web.js  http-server.js  index.js  livekit.js  tun.js  tunnel.js  ui-html.js  wire-codecs.js  ws-client.js
bale-vpn-node/tun_addon/: tun.cc  tun_darwin.cc
bale-vpn-rust/: Cargo.toml
bale-vpn-rust/bale-vpn/: Cargo.toml
bale-vpn-rust/bale-vpn/assets/: index.html
bale-vpn-rust/bale-vpn/src/: client.rs  config.rs  daemon.rs  main.rs  server.rs  ui.rs  ui_native.rs
bale-vpn-rust/bale-vpn/src/tun/: linux.rs  macos.rs  mod.rs
docs/: android-en.md  android-fa.md  architecture.md  node-en.md  node-fa.md  rust-en.md  rust-fa.md
lk-signaling-rust/: Cargo.toml
lk-signaling-rust/lk-signaling/: Cargo.toml
lk-signaling-rust/lk-signaling/src/: lib.rs  tests.rs
lktunnel-rust/: .gitignore  Cargo.toml
lktunnel-rust/.cargo/: config.toml
lktunnel-rust/cli/: Cargo.toml  build.rs
lktunnel-rust/cli/src/: main.rs
lktunnel-rust/lktunnel/: Cargo.toml
lktunnel-rust/lktunnel/src/: counters.rs  dispatcher.rs  errors.rs  ipv6.rs  lib.rs  manager.rs  quic_tunnel.rs  rtc.rs  rtp.rs  socks5.rs  socks5_quic.rs  tun.rs
lktunnel-rust/lktunnel/src/nat/: debug.rs  dispatcher.rs  filter.rs  flow_key.rs  ip_addr.rs  ip_packet.rs  mod.rs  sweep.rs  tcp_session.rs  udp_session.rs
lktunnel-rust/lktunnel/src/server/: mod.rs  tun_gateway.rs
lktunnel-rust/lktunnel/tests/: socks5_quic_e2e.rs
lktunnel-rust/patches/: apply.sh  libwebrtc-0.3.33.patch  livekit-0.7.40.patch  livekit-api-0.4.22.patch  webrtc-sys-0.3.31.patch
reverse_engineering/: download.py  extract_proto.py
scripts/: balevpn.ps1
