# Android-only workspace. The core `lktunnel` crate lives at the
# repo top-level under `../../lktunnel-rust/lktunnel/` so it can be
# shared with the CLI (and any future host-side consumers). Only the
# JNI shim — which actually links to `libandroid.so` and ships as the
# `liblktunnel.so` artefact loaded by Kotlin — lives here.
[workspace]
resolver = "2"
members = ["lktunnel-android", "bale-signaling-android", "jni-shared"]

[workspace.package]
edition = "2021"
publish = false

[profile.release]
opt-level     = "z"
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"

# No vendored-crate patch anymore — the libwebrtc transport is gone. The
# `lktunnel` core (shared with this workspace) now rides `webrtc-rs` (pure
# Rust) plus crates.io `livekit-api` (signal client; `sdk=js` via
# `SignalSdkOptions`) and `livekit-protocol` (wire types).
