# Android JNI shim over the `bale-signaling` core. Produces
# `libbale_signaling.so` loaded from Kotlin via
# `System.loadLibrary("bale_signaling")`. Exposes the
# `Java_ai_bale_proxy_bale_signaling_*` JNI symbols that the
# Kotlin auth + signaling code calls.
#
# Wraps:
#   * BaleAuth — SMS OTP + signup + cookie refresh
#   * BaleSignaling — the `lk-signaling::Signaling` impl
#
# The Java side talks to two types:
#   * `BaleAuthNative` — stateless static methods
#   * `BaleSignalingNative` — handle-based, one `Box<Arc<BaleSignaling>>`
#     per Kotlin instance
[package]
name        = "bale-signaling-android"
version     = "0.1.0"
edition.workspace = true
publish.workspace = true
description = "Android JNI bridge for the bale-signaling crate."

[lib]
# Override artefact name so cargo-ndk produces `libbale_signaling.so`
# directly; matches `System.loadLibrary("bale_signaling")`.
name       = "bale_signaling"
crate-type = ["cdylib"]
path       = "src/libjni.rs"

[dependencies]
bale-signaling = { path = "../../../bale-signaling-rust/bale-signaling" }
lk-signaling   = { path = "../../../lk-signaling-rust/lk-signaling" }
jni-shared     = { path = "../jni-shared" }

jni            = "0.21"
async-trait    = "0.1"
android_logger = "0.13"
log            = "0.4"
once_cell      = "1"
parking_lot    = "0.12"

# Tokio runtime to drive the async BaleAuth + BaleSignaling APIs
# from sync JNI entry points. Reused across calls via a single
# OnceCell-stashed runtime — matches what `lktunnel-android` does.
tokio          = { version = "1", features = [
    "rt-multi-thread", "sync", "macros", "time",
] }
