# Helpers shared between the Android JNI shims (lktunnel-android +
# bale-signaling-android). Lives in this workspace so it inherits
# the vendored-crate patches; no external publishing.
[package]
name        = "jni-shared"
version     = "0.1.0"
edition.workspace = true
publish.workspace = true
description = "Shared handle-registry + JNI helpers for the bale-vpn-android shims."

[lib]
name = "jni_shared"
path = "src/lib.rs"

[dependencies]
parking_lot = "0.12"
once_cell   = "1"
jni         = "0.21"
log         = "0.4"
tokio       = { version = "1", features = [
    "rt-multi-thread", "sync", "macros", "time",
] }
