# Helpers consumed by the merged Android JNI shim (`lktunnel-jni`,
# which covers what used to be split across `lktunnel-android` +
# `bale-signaling-android`). No external publishing.
[package]
name        = "jni-shared"
version     = "0.1.0"
edition.workspace = true
publish.workspace = true
description = "Shared handle-registry + JNI helpers for the bale-vpn-android shims."

[lib]
name = "jni_shared"
path = "src/lib.rs"

[dependencies]
parking_lot = "0.12"
once_cell   = "1"
jni         = "0.21"
log         = "0.4"
tokio       = { version = "1", features = [
    "rt-multi-thread", "sync", "macros", "time",
] }
